templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: angular-app
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      serviceAccountName: website-helm-svc
      containers:
        - name: angular-app
          image: "ghcr.io/alexander-moser/website:main"
          ports:
            - name: http
              containerPort: 4200
              protocol: TCP
      automountServiceAccountToken: false
