templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-helm-svc
  labels:
    helm.sh/chart: website-helm-0.1.0
    app.kubernetes.io/name: website-helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4200
  selector:
    app: angular-app
