templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-helm-ing
  labels:
    helm.sh/chart: website-helm-0.1.0
    app.kubernetes.io/name: website-helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "almos.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: website-helm-svc
                port:
                  number: 80
